force-app/main/default/objects/ffct__MigrationRuleValue__c/ffct__MigrationRuleValue__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffct__migrationsetonlinehelp</customHelpPage>
    <description>Holds the value for the Migration Rule.</description>
    <label>Migration Rule Value</label>
    <nameField>
        <displayFormat>MRV-{000000}</displayFormat>
        <label>Migration Rule Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Rule Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>