force-app/main/default/objects/ffct__MigrationRuleValue__c/fields/ffct__Type__c.field-meta.xml
<CustomField>
    <fullName>ffct__Type__c</fullName>
    <description>Holds the Type of value.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CustomObject</fullName>
            </value>
            <value>
                <fullName>Metadata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>